--- a/client/package.json
+++ b/client/package.json
@@ -37,5 +37,13 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.4.2"
+  },
+  "overrides": {
+    "ngx-bootstrap": {
+      "angular/common": "$angular/common",
+      "angular/core": "$angular/core",
+      "angular/animations": "$angular/animations",
+      "angular/forms": "$angular/forms"
+    }
   }
 }
